--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="mailto:josiahgare@gmail.com" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
