--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 										<li><a href="generic.html" class="button">View project</a></li>
 									</ul>
 								</section>
+								<!--
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>vacant</h3>
@@ -143,37 +144,15 @@
 								<li><a href="generic.html" class="button">Learn more</a></li>
 							</ul>
 						</div>
+					-->
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>I bring dedication and passion for solving business problems with data. Also, feel free to leave me a feedback concerning 
-								this portfolio website. All feedbacks are welcomed.
-							</p>
+							<p>I bring dedication and passion for solving business problems with data.</p>
 							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="mailto:josiahgare@gmail.com" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
 								<section>
 									<ul class="contact">
 										<li>
@@ -181,12 +160,16 @@
 											<span>Lagos, Nigeria</span>
 										</li>
 										<li>
-											<h3>Email</h3>
-											<a href="mailto:josiahgare@gmail.com">josiahgare@gmail.com</a>
-										</li>
-										<li>
 											<h3>Phone</h3>
 											<span>(+234) 816-738-3043</span>
+										</li>
+									</ul>
+								</section>
+								<section>
+									<ul class="contact">
+										<li>
+											<h3>Email</h3>
+											<a href="mailto:josiahgare@gmail.com">josiahgare@gmail.com</a>
 										</li>
 										<li>
 											<h3>Social</h3>
