--- a/index.html
+++ b/index.html
@@ -46,38 +46,43 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="https://github.com/Josiahgare/data-project/tree/main/Salifort%20Motors" class="image"><img src="images/salifort.jpg" alt="" data-position="center center" /></a>
+							<a href="https://github.com/Josiahgare/NYC-Taxi-Fare-Estimation" class="image"><img src="images/nyc_taxi.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Predicting Employee Retention at Salifort Motors</h2>
-									<p>Dealing with high employee turnover, management aim to predict and address it. HR surveys employees to identify reasons.
-										The goal is to build a machine learning model that solves this problem.</p>
+									<h2>New York City Taxi Fare Estimation</h2>
+									<p>Conduct A/B test, develop Linear regression (to estimate taxi fare), 
+										and develop Machine learning (to predict passengers who are generous tippers) for the commission.
+									</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Josiahgare/data-project/tree/main/Salifort%20Motors" class="button">View project</a></li>
+										<li><a href="https://github.com/Josiahgare/NYC-Taxi-Fare-Estimation" class="button">View project</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="https://github.com/Josiahgare/Data-cleaning-with-SQL" class="image"><img src="images/Bike.PNG" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Data Cleaning with SQL</h2>
-									<p>In this project, I cleaned cycling rental data in Microsoft SQL Server</p>
+									<p>Cleaning high quality bikes and cycling accessories data using Microsoft SQL Server before performing data 
+										analysis on it. To gain insight into performing brands and top customers.
+									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">View project</a></li>
+										<li><a href="https://github.com/Josiahgare/Data-cleaning-with-SQL" class="button">View project</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="https://public.tableau.com/app/profile/josiah.oghenegare/vizzes" class="image"><img src="images/icon-tableau.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Tableau project</h2>
-									<p>To aid skrocket management to gain insight into their customer behaviour and identify their top customers for further investment.</p>
+									<p>This epository contains projects done with Tableau and hosted on Tableau public. Tableau is a software that 
+										aid in dynamic data visualization to gain insights from data and to share insights with stakeholders.
+									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">View project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/josiah.oghenegare/vizzes" class="button">View project</a></li>
 									</ul>
 								</div>
 							</div>
@@ -93,17 +98,23 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Data Science Challenge</h3>
-									<p>In this project, the goal is to build a machine learning model that can predict the likelihood of customer churn.</p>
+									<p>Develop model to predict customer likelihood to churn from a video streaming platform.<br>
+										<br>Host: Coursera
+										<br>Tool: Python
+									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">View project</a></li>
+										<li><a href="https://github.com/Josiahgare/Data-science-challenge" class="button">View project</a></li>
 									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Automatidata</h3>
-									<p>New York City Taxi and limousine Commission.</p>
+									<h3>HR Analysis</h3>
+									<p>Perform EDA to gain insight on employee turnover and develop machine learning model to 
+										predict employee retention at Salifort Motors.
+										<br>Tool: Python
+									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">View project</a></li>
+										<li><a href="https://github.com/Josiahgare/HR-analysis" class="button">View project</a></li>
 									</ul>
 								</section>
 								<!--
@@ -178,7 +189,7 @@
 												<li><a href="https://linkedin.com/in/josiah-obarhuakpor" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
-									</ul>
+									</ul>								
 								</section>
 							</div>
 						</div>
